--- a/style.css
+++ b/style.css
@@ -8,8 +8,25 @@ body{
 	max-width:700px;
 }
 
-h4, h5, h6{
+h1{
+	font-size:1.2em;
+}
+
+h4{
 	margin-top:10px;
+	margin-bottom:5px;
+}
+
+h5, h6{
+	margin-top:5px;
 	margin-bottom:10px;
 }
 
+
+h5{
+	color: #888;
+}
+
+em{
+	color: #bbb;
+}
